NetBSD Problem Report #11227
Received: (qmail 16574 invoked from network); 14 Oct 2000 17:04:36 -0000
Message-Id: <Pine.SOL.4.21.0010141756190.3055-100000@draco.cus.cam.ac.uk>
Date: Sat, 14 Oct 2000 18:04:33 +0100 (BST)
From: Ben Harris <bjh21@netbsd.org>
Sender: Ben Harris <bjh21@cus.cam.ac.uk>
To: gnats-bugs@gnats.netbsd.org
Subject: POSIX.2: tabs not provided
>Number: 11227
>Category: standards
>Synopsis: POSIX.2: tabs not provided
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: roy
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat Oct 14 17:05:00 +0000 2000
>Closed-Date: Fri Dec 19 20:37:44 +0000 2008
>Last-Modified: Fri Dec 19 20:37:44 +0000 2008
>Originator: Ben Harris
>Release: 2000-02-07
>Organization:
>Environment:
NetBSD cromarty 1.4X NetBSD 1.4X (CROMARTY) #9: Wed May 3 23:49:51 BST 2000
bjh21@cromarty:/usr/src/sys/arch/macppc/compile/CROMARTY macppc
>Description:
POSIX.2 specifies a "tabs" utility, which sets and clears tabs on the
current terminal. We don't seem to have one of these.
>How-To-Repeat:
cromarty:~$ export PATH=`getconf PATH`
cromarty:~$ tabs
bash: tabs: command not found
>Fix:
>Release-Note:
>Audit-Trail:
From: Roy Marples <roy@marples.name>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: Re: standards/11227
Date: Fri, 07 Nov 2008 15:04:59 +0000
Hi
This looked fairly trivial, so I've spent a few hours last weekend
coding one up and writing a man page for it. You can find them here [1].
Although they're copyright me, I would like to donate them to NetBSD as
other OS's have their own implementation. You'll be pleased to know that
mine provides full compliance with POSIX [2] whilst also being the
smallest implementation I know of.
Thanks
Roy
[1] http://roy.marples.name/~roy/tabs
[2] http://www.opengroup.org/onlinepubs/009695399/utilities/tabs.html
From: Roy Marples <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/11227 CVS commit: src
Date: Thu, 11 Dec 2008 11:14:37 +0000 (UTC)
Module Name: src
Committed By: roy
Date: Thu Dec 11 11:14:37 UTC 2008
Modified Files:
src/distrib/sets/lists/base: mi
src/distrib/sets/lists/man: mi
src/usr.bin: Makefile
Log Message:
Add the tabs utility, conforming to IEEE Std 1003.1 (``POSIX.1'').
Fixes PR bin/11227
No objection on tech-userland, ok: martin
To generate a diff of this commit:
cvs rdiff -r1.784 -r1.785 src/distrib/sets/lists/base/mi
cvs rdiff -r1.1113 -r1.1114 src/distrib/sets/lists/man/mi
cvs rdiff -r1.172 -r1.173 src/usr.bin/Makefile
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Roy Marples <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/11227 CVS commit: src
Date: Thu, 11 Dec 2008 11:18:35 +0000 (UTC)
Module Name: src
Committed By: roy
Date: Thu Dec 11 11:18:35 UTC 2008
Modified Files:
src/doc: CHANGES
Added Files:
src/usr.bin/tabs: Makefile tabs.1 tabs.c
Log Message:
Add the tabs utility, conforming to IEEE Std 1003.1 (``POSIX.1'').
Fixes PR bin/11227
No objection on tech-userland, ok: martin
To generate a diff of this commit:
cvs rdiff -r1.1149 -r1.1150 src/doc/CHANGES
cvs rdiff -r0 -r1.1 src/usr.bin/tabs/Makefile src/usr.bin/tabs/tabs.1 \
src/usr.bin/tabs/tabs.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
Responsible-Changed-From-To: standards-manager->roy
Responsible-Changed-By: roy@NetBSD.org
Responsible-Changed-When: Thu, 11 Dec 2008 11:28:46 +0000
Responsible-Changed-Why:
I wrote the utility
State-Changed-From-To: open->feedback
State-Changed-By: roy@NetBSD.org
State-Changed-When: Thu, 11 Dec 2008 11:28:46 +0000
State-Changed-Why:
The utility requires feedback to ensure it works correctly./
State-Changed-From-To: feedback->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Fri, 19 Dec 2008 15:37:44 -0500
State-Changed-Why:
has been fixed
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.51 2026/08/10 02:28:17 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.