Add the tabs utility, conforming to IEEE Std 1003.1 (``POSIX.1''). Fixes PR bin/11227

No objection on tech-userland, ok: martin